fix overlap of column names

--- a/th-data-join.css
+++ b/th-data-join.css
@@ -4,7 +4,8 @@
 }
 
 .columnName {
-  margin: 10px;
+  margin: 5px 10px;
+  display: inline-block;
   padding: 3px 5px;
   border: 2px solid #2fa3af;
   color: #2fa3af;
